--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laraveldaily/laravel-invoices": "^3.1",
         "spatie/laravel-permission": "^5.10",
         "srmklive/paypal": "^3.0"
     },
