--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/breeze": "^1.21",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.23",
+        "laravel/telescope": "^4.15",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
