installed dependencies, login callback

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,6 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 PAYPAL_MODE=
 PAYPAL_SANDBOX_CLIENT_ID=
 PAYPAL_SANDBOX_CLIENT_SECRET=
+
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_NAME=
