--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laraveldaily/laravel-invoices": "^3.1",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "spatie/laravel-permission": "^5.10",
         "srmklive/paypal": "^3.0"
     },
