--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "anayarojo/shoppingcart": "^4.2",
+        "appslabke/lara-izitoast": "^1.1",
         "azate/laravel-telegram-login-auth": "^2.3",
         "doctrine/dbal": "^3.6",
         "guzzlehttp/guzzle": "^7.2",
@@ -16,6 +17,7 @@
         "laravel/tinker": "^2.8",
         "laraveldaily/laravel-invoices": "^3.1",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^5.10",
         "srmklive/paypal": "^3.0"
     },
