--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "chart.js": "^3.0.2"
+        "chart.js": "^3.0.2",
+        "laravel-echo": "^1.15.3",
+        "pusher-js": "^8.3.0"
     }
 }
