--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "chart.js": "^3.0.2",
+        "htmx.org": "^1.9.6",
         "laravel-echo": "^1.15.3",
         "pusher-js": "^8.3.0"
     }
